--- a/i/ii/iii/iii.co.uk.html
+++ b/i/ii/iii/iii.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iii.co.uk privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218182631id_/http%3A//www.iii.co.uk/about/%3Ftype%3Dlegal%26subtype%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iii.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014536id_/http%3A//www.iii.co.uk/about/%3Ftype%3Dlegal%26subtype%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -121,7 +121,8 @@ function showPanel(panel,size,Id) {
 
 
 <script language="JavaScript" type="text/javascript">
-	function get_current_user ()
+
+function get_current_user ()
 {
 	var III_user = ''; 
 		return III_user;
@@ -138,6 +139,11 @@ function logged_in_user()
 	loggedin.style.display="none";
 	logincol.style.display="";
 	}
+
+function set_loginbox_focus()
+{
+	document.login_form.III_username.focus();
+		}
 
 </script>
 <script>
@@ -457,8 +463,9 @@ function make_ad_string(pos,type)
 			my_dcopt='';
 		}
 
+		
 	
-		var ad_str = 'ii_top_bottom_nav/?zone=;pos='+pos+';env=;dcopt=' + my_dcopt + ';sz='+xypos(pos) + ';tile=' + my_tile + ';ord=' + ord;
+		var ad_str = 'ii_about/;zone=;pos='+pos+';env=;dcopt=' + my_dcopt + ';sz='+xypos(pos) + ';tile=' + my_tile + ';is_ifa=no' + ';ord=' + ord + '?';
 
 		var string = 'http://ad.uk.doubleclick.net/' + type + '/' + ad_str;
 
@@ -538,11 +545,11 @@ function OAS_SERVE_AD(pos)
 			real_position.src=url_i;
 		}
 
-       	// SITE = ii_top_bottom_nav
+       	// SITE = ii_about
 	// ZONE = 
 	// ENV =  
 	// PTILE =  
-	// KEYWORDS =  
+	// KEYWORDS =  is_ifa=no
 	}
 		//alert('Pos = ' + pos + ' size = ' + xypos(pos) + ' tile = ' + my_tile + ' dcopt = ' + my_dcopt);
 }
@@ -550,67 +557,30 @@ function OAS_SERVE_AD(pos)
 //-->
 </script>
 <!-- OAS SETUP end -->
-<style>
-	.NewsLinks {
-	font-family: arial;
-	font-size: xx-small;
-	font-weight: normal;
-	color: ;
-	text-decoration: none;
-	}
-	a:link.NewsLinks {text-decoration: none; color : ; font-size: xx-small;}
-	a:visited.NewsLinks {color : ; font-size: xx-small;}
-	a:active.NewsLinks {text-decoration: none; color : ; font-size: xx-small;}
-	a:hover.NewsLinks {color : ; font-size: xx-small;}
-
-	.NewsHeader {
-	font-family: arial;
-	font-size: xx-small;
-	font-weight: normal;
-	color: ;
-	text-decoration: none;
-	padding-left: 5px;
-	}
-	a:link.NewsHeader {text-decoration: none; color : ; font-size: xx-small;}
-	a:visited.NewsHeader {color : ; font-size: xx-small;}
-	a:active.Header {text-decoration: none; color : ; font-size: xx-small;}
-	a:hover.NewsHeader {color : ; font-size: xx-small;}
-
-	.ticker-border {
-		background-color: ;
-		margin: 1px;
-		padding: 1px;
-		height: 50;
-		width:	200;
-		border:  dotted ;
-	}
-</style>
-
 <script language="javascript1.1" src="/js/hbx.js"></script>
 </head>
 
 <body bgcolor="#ffffff">
 <div class="hide"><a href="#content" title="Skip navigation" accesskey="2">Skip navigation</a></div>
 
-
 <div id="top">
 <table style="margin:0; padding:0" width="770" cellpadding="0" cellspacing="0" border="0">
 	<tbody><tr valign="middle">
 	<td class="brand" align="left" nowrap="nowrap">
-<a href="/"><img src="/icons/logos/uk_logo.gif" width="140" height="67" border="0" alt="logo"></a>
+	<a href="/"><img src="/icons/logos/uk_logo.gif" width="140" height="67" border="0" alt="logo"></a>
 	</td>
 	<td class="advert" align="right">
 <script language="JavaScript" type="text/javascript">
 <!--
 OAS_AD(convert_tag('Top'));
 -->
-</script><script language="JavaScript1.1" src="http://ad.uk.doubleclick.net/adj/ii_top_bottom_nav/?zone=;pos=top;env=;dcopt=ist;sz=468x60;tile=1;ord=2094161658958704.2"></script>
+</script><script language="JavaScript1.1" src="http://ad.uk.doubleclick.net/adj/ii_about/;zone=;pos=top;env=;dcopt=ist;sz=468x60;tile=1;is_ifa=no;ord=2638748046884740?"></script>
 	</td>
 	</tr>
 </tbody></table>
-
 </div>
-<script language="JavaScript1.1" type="text/javascript">
+
+	<script language="JavaScript1.1" type="text/javascript">
 <!--
 function navcheckform(f) {
 	var exchosen = 0;
@@ -633,28 +603,28 @@ function NavAct(act) {
 <input type="radio" id="ch_quote" name="option" onclick="NavAct(this.value)" value="/quotes/"><label for="ch_quote">Shares</label> 
 <input class="button" name="submitButtonName" type="submit" value="Search">
 </form></li>
-<li>&nbsp;&nbsp;Sunday 18 December 2005</li>
+<li>&nbsp;&nbsp;Thursday 15 June 2006</li>
 </ul>
 </div>
 <div id="breadcrumbs">
 	<div style="float:left">
 <a href="/">Home</a>
-	/ <a href="/news/">Investing</a>
-	/ <a href="/about/">About us</a>
-	/ <a href="/about/?type=legal&amp;subtype=privacy">Legal terms</a>
-	</div>
+		/ <a href="/about/">About us</a>
+		/ <a href="/about/?type=legal&amp;subtype=privacy">Legal terms</a>
+		</div>
 	<div class="dontprint" style="float:right">
-<a style=" font-weight:normal" title="Register with Interactive Investor for a portfolio, to set up a share dealing account, to buy funds and ISAs, to sign up for newsletters and to access some of our share trading tools and information. It's free to register." href="/registration/">Register</a> |
-<a style=" font-weight:normal" title="Update your address and subscribe to finance newsletters." href="/profile/">My Account</a> |
-<a style=" font-weight:normal" title="The history of Interactive Investor, formerly known as Ample (Ample.com)." href="/about/">About Us</a> |
-<a style=" font-weight:normal" title="An overview of the main site areas" href="/home/?type=sitemap">Site Map</a> |
-<a style=" font-weight:normal" title="Define all those tricky finance words." href="http://www.finance-glossary.com/pages/home.htm?ginPtrCode=12738&amp;PopupMode=false">Glossary</a> |
-<a style=" font-weight:normal" title="Common questions, FAQs, online support, forgotten password" href="/help/">Help</a> |
-<a style=" font-weight:normal" title="General site conditions, discussion board terms, ISA and PEP terms, etc." href="/about/?type=legal">T&amp;Cs</a> |
-<a title="Login to Interactive Investor" href="/reg/about/">Login</a>
+	<a style="font-weight:normal" title="Register with Interactive Investor for a portfolio, to set up a share dealing account, to buy funds and ISAs, to sign up for newsletters and to access some of our share trading tools and information. It's free to register." href="/registration/">Register</a> |
+		<a style="font-weight:normal" title="Update your address and subscribe to finance newsletters." href="/profile/">My Account</a> |
+		<a style="font-weight:normal" title="The history of Interactive Investor, formerly known as Ample (Ample.com)." href="/about/">About Us</a> |
+<a style="font-weight:normal" title="An overview of the main site areas" href="/help/?type=sitemap">Site Map</a> |
+<a style="font-weight:normal" title="Define all those tricky finance words." href="http://www.finance-glossary.com/pages/home.htm?ginPtrCode=12738&amp;PopupMode=false">Glossary</a> |
+<a style="font-weight:normal" title="Common questions, FAQs, online support, forgotten password" href="/help/">Help</a> |
+		<a style="font-weight:normal" title="General site conditions, discussion board terms, ISA and PEP terms, etc." href="/about/?type=legal">T&amp;Cs</a> |
+		<a title="Login to Interactive Investor" href="/reg/about/">Login</a>
+		</div>
 </div>
-</div>
-<div class="advert" style="position:absolute; left:920px; padding:10px 0;">
+		
+<div style="display:none"></div><div class="advert" style="position:absolute; left:920px; padding:10px 0;">
 </div>
 
 <div id="container">
@@ -662,7 +632,7 @@ function NavAct(act) {
 
 		<div id="navcontainer">
 
-	<ul><li><a title="Get a snapshot of the tools and services provided by one of the UK's leading finance  websites." href="/">Home</a></li><li><a title="Get the latest investment news and ideas from our investment experts." href="/news/">Investing</a><ul class="subnav"><li><a title="Business and finance news from Reuters and AFX." href="/news/" class="inactive">News</a></li><li><a title="Latest summaries and updates, plus newspaper tips, world investment markets, share prices, share quotes, winners and losers and most active traders." href="/markets/" class="inactive">Markets</a></li><li><a title="Sign up for a snapshot of your wealth in our free portfolio. Track your stocks and shares, funds, property and more." href="/wealth/" class="inactive">Portfolio</a></li><li><a title="Buy and sell stocks and shares. Share dealing news, how to's and information." href="/sharedealing/" class="inactive">Share Dealing</a></li><li><a title="Un-contended Level 2 for just £24.99 per month; SETS, SETSmm, and SEAQ. Live prices streamed to your portfolio; Trade direct from Level 2; Advanced Charting and Technical Analysis; Real Time Terminal; Live streaming discussions and news integrated within portfolio" href="/tradingtools/" class="inactive">Level 2 / Tools</a></li><li><a title="Sign up to trade Contracts For Difference. Short or go long." href="/cfd/" class="inactive">CFD Trading</a></li><li><a title="Sign up for Spread Betting." href="/spreadbetting/" class="inactive">Spread Betting</a></li><li><a title="Buy a UK ISA from our ISA fund supermarket or transfer." href="/isas/" class="inactive">ISAs</a></li><li><a title="Buy funds, ISAs, unit trusts and OEICs online or complete a PEP transfer." href="/funds/" class="inactive">Funds</a></li><li><a title="Find a property, UK or abroad, value your home, commercial property, land for sale, buy to let, property as your pension, mortgages, conveyancing and much more" href="http://personalfinance.iii.co.uk/property/" class="inactive">Property</a></li><li><a title="Exchange tips on Interactive Investor's bulletin boards and message boards." href="/community/" class="inactive">Community</a></li></ul></li><li><a title="Maximise your money. View a large range of personal finance articles and tools." href="http://personalfinance.iii.co.uk">Personal Finance</a><ul class="subnav"><li><a title="Improve your spending, saving and budgeting by using our financial planning tools." href="http://personalfinance.iii.co.uk/planning/" class="inactive">Planning</a></li><li><a title="Free review service. Mortgage calculator . Get the best rate. Endowments, repayment, buy to let, property abroad." href="http://personalfinance.iii.co.uk/mortgages/" class="inactive">Mortgages</a></li><li><a title="Compare credit cards , APR, interest rates, platinum cards, etc." href="http://personalfinance.iii.co.uk/creditcards/" class="inactive">Credit cards</a></li><li><a title="Compare loan rates, APR, interest rates, repayment periods." href="http://personalfinance.iii.co.uk/loans/" class="inactive">Loans</a></li><li><a title="Find the highest interest rates on savings accounts. Cash ISAs." href="http://personalfinance.iii.co.uk/savings/" class="inactive">Savings</a></li><li><a title="Compare current accounts and banks, interest rates, overdraft facilities, cheque books, branch networks." href="http://personalfinance.iii.co.uk/banking/" class="inactive">Banking</a></li><li><a title="Review pension information for your retirement, SIPPs, annuities, tax savings, pension guides." href="http://personalfinance.iii.co.uk/pensions/" class="inactive">Pensions</a></li><li><a title="Find cheap home insurance, travel insurance, car insurance and pet insurance. Plus protection products from LloydsTSB and Hiscox." href="http://personalfinance.iii.co.uk/insurance/" class="inactive">Insurance</a></li><li><a title="Get help finding the most appropriate life insurance protection policy." href="http://personalfinance.iii.co.uk/lifeinsurance/" class="inactive">Life Insurance</a></li><li><a title="Tax tips and links to the Inland Revenue's online services. Guides to higher and lower rates of tax, tax saving tips, pensions, SIPPS, CGT." href="http://personalfinance.iii.co.uk/tax/" class="inactive">Tax</a></li><li><a title="Compare and save on gas, electricity and telephone bills. Utilities made easy." href="http://personalfinance.iii.co.uk/cutbills/" class="inactive">Cut your bills</a></li></ul></li></ul>
+	<ul><li><ul><li><a title="Business and finance news from Reuters and AFX." href="/news/" class="inactive">News</a></li><li><a title="Latest summaries and updates, plus newspaper tips, world investment markets, share prices, share quotes, winners and losers and most active traders." href="/markets/" class="inactive">Markets</a></li><li><a title="Exchange tips on Interactive Investor's bulletin boards and message boards." href="/community/" class="inactive">Community</a></li><li><a title="Sign up for a snapshot of your wealth in our free portfolio. Track your stocks and shares, funds, property and more." href="/portfolio/" class="inactive">Portfolio</a></li><li><a title="Buy and sell stocks and shares. Share dealing news, how to's and information. " href="/sharedealing/" class="inactive">Share Dealing</a></li><li><a title="Sign up to trade Contracts For Difference. Short or go long." href="/cfd/" class="inactive">CFD Trading</a></li><li><a title="Sign up for Spread Betting." href="/spreadbetting/" class="inactive">Spread Betting</a></li><li><a title="Sign up for Sport's Betting." href="/sportsbetting/?type=sports" class="inactive">Sports Betting</a></li><li><a title="Un-contended Level 2 for just £24.99 per month; SETS, SETSmm, and SEAQ. Live prices streamed to your portfolio; Trade direct from Level 2; Advanced Charting and Technical Analysis; Real Time Terminal; Live streaming discussions and news integrated within portfolio" href="/tradingtools/" class="inactive">Tools</a></li><li><a title="Find the highest interest rates on savings accounts. Cash ISAs." href="http://personalfinance.iii.co.uk/savings/" class="inactive">Savings</a></li><li><a title="Buy a UK ISA from our ISA fund supermarket or transfer." href="/isas/" class="inactive">ISAs</a></li><li><a title="Buy funds, ISAs, unit trusts and OEICs online or complete a PEP transfer." href="/funds/" class="inactive">Funds</a></li><li><a title="Review pension information for your retirement, SIPPs, annuities, tax saving s, pension guides." href="http://personalfinance.iii.co.uk/pensions/" class="inactive">Pensions</a></li><li><a title="Find a property, UK or abroad, value your home, commercial property, land for sale, buy to let, property as your pension, mortgages, conveyancing and much more" href="http://personalfinance.iii.co.uk/property/" class="inactive">Property</a></li><li><a title="Improve your spending, saving and budgeting by using our financial planning tools." href="http://personalfinance.iii.co.uk/planning/" class="inactive">Planning</a></li><li><a title="Free review service. Mortgage calculator . Get the best rate. Endowments, re payment, buy to let, property abroad." href="http://personalfinance.iii.co.uk/mortgages/" class="inactive">Mortgages</a></li><li><a title="Compare credit cards , APR, interest rates, platinum cards, etc." href="http://personalfinance.iii.co.uk/creditcards/" class="inactive">Credit cards</a></li><li><a title="Compare loan rates, APR, interest rates, repayment periods." href="http://personalfinance.iii.co.uk/loans/" class="inactive">Loans</a></li><li><a title="Get help finding the most appropriate life insurance protection policy." href="http://personalfinance.iii.co.uk/lifeinsurance/" class="inactive">Life Insurance</a></li><li><a title="Find cheap home insurance, travel insurance, car insurance and pet insurance . Plus protection products from LloydsTSB and Hiscox." href="http://personalfinance.iii.co.uk/insurance/" class="inactive">Insurance</a></li><li><a title="Compare current accounts and banks, interest rates, overdraft facilities, ch eque books, branch networks." href="http://personalfinance.iii.co.uk/banking/" class="inactive">Banking</a></li><li><a title="Tax tips and links to the Inland Revenue's online services. Guides to higher and lower rates of tax, tax saving tips, pensions, SIPPS, CGT." href="http://personalfinance.iii.co.uk/tax/" class="inactive">Tax</a></li><li><a title="Compare and save on gas, electricity and telephone bills. Utilities made eas y." href="http://personalfinance.iii.co.uk/cutbills/" class="inactive">Cut your bills</a></li></ul></li></ul>
 
 	</div>
 	</div>
@@ -741,21 +711,19 @@ EC2M 1QS
 
 </div>
 
+<div id="footer">
+
 <div style="clear:both; margin:15px 120px 0" class="advert"> 
 <script class="advert" language="javascript" type="text/javascript">
 <!--
 	OAS_AD(convert_tag('Bottom'));
 //-->
-</script><script language="JavaScript1.1" src="http://ad.uk.doubleclick.net/adj/ii_top_bottom_nav/?zone=;pos=bottom;env=;dcopt=;sz=468x60;tile=2;ord=2094161658958704.2"></script>
+</script><script language="JavaScript1.1" src="http://ad.uk.doubleclick.net/adj/ii_about/;zone=;pos=bottom;env=;dcopt=;sz=468x60;tile=2;is_ifa=no;ord=2638748046884740?"></script>
 </div>
-
-<div id="footer">
-
-
 <div id="footernav">
 	<div id="footernavleft">
-<a href="/about/?type=legal">Legal terms</a>
-<a href="/about/?type=legal&amp;subtype=secure">Risk warning</a>
+			<a href="/about/?type=legal">Legal terms</a>
+			<a href="/about/?type=legal&amp;subtype=secure">Risk warning</a>
 <a href="/about/?type=legal&amp;subtype=privacy">Privacy</a>
 <a href="/about/?type=legal&amp;subtype=security">Security</a>
 <a href="/mobile/">Mobile</a>
@@ -773,20 +741,26 @@ EC2M 1QS
 <a href="http://www.fsa.gov.uk"><img src="/icons/ii/3rd_party/FSA.gif" width="55" height="50" alt="Authorised and regulated by the Financial Services Authority" border="0"></a>
 	</td>
 	<td>
-<p class="company">
+
+	<p class="company">
 Interactive Investor Trading Limited, trading as "Interactive Investor", is authorised and regulated by the Financial Services Authority.<br>
 </p>
-
-<p class="office">
+	<p class="office">
 Registered Office: Dashwood House, 69 Old Broad Street, London EC2M 1QS, telephone <span style="white-space: nowrap">0845 88 00 267</span>. Registered in England with Company Registration number 3699618.
 Group VAT registration number 832 6732 26.<br>
 We may record and/or monitor telephone calls or intercept other telecommunications between us.  This is to protect both of us and for training purposes.
 </p>
 	</td>
-	<td width="145">
-<a href="/about/"><img src="/icons/ii/3rd_party/awards.gif" width="145" height="51" border="0" alt="Web User Gold Award for Best New Website and Online Finance Awards Best Share Dealing Website"></a>
+<td width="145">
+<a href="/about/"><object align="middle" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" height="51" id="scolling-awards" width="145">
+	<param name="allowScriptAccess" value="sameDomain">
+	<param name="movie" value="/icons/flash/scolling-awards-small.swf">
+	<param name="quality" value="high">
+	<param name="bgcolor" value="#ffffff">
+	<embed align="middle" allowscriptaccess="sameDomain" bgcolor="#ffffff" height="51" name="scolling-awards" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="/icons/flash/scolling-awards-small.swf" type="application/x-shockwave-flash" width="145"> 
+</object></a>
 	</td>
-	</tr>
+</tr>
 </tbody></table>
 
 			
