--- a/n/ne/new/newsnet5.com.html
+++ b/n/ne/new/newsnet5.com.html
@@ -1,12 +1,43 @@
-<!--The following is the downloaded HTML source of the newsnet5.com privacy policy that was archived on 2005-04-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050418012509id_/http%3A//www.newsnet5.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newsnet5.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014550id_/http%3A//www.newsnet5.com/privacy) for the most accurate reproduction.-->
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><title>NewsNet5.com - Privacy</title>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>NewsNet5.com - Privacy</title>
 <meta name="keywords" content="Station, Privacy">
+<meta name="categories" content="Station, Privacy">
+<meta name="WT.cg_n" content="Station">
+<meta name="WT.cg_s" content="Privacy">
+<meta name="WT.ti" content="Privacy">
+<meta name="DCSext.mtype" content="index">
 <link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
 <script type="text/javascript" src="/javascript/script.js"></script>
+<!-- begin Rev Sci code -->
+<script type="text/javascript" src="http://js.revsci.net/gateway/gw.js?csid=C05503" charset="ISO-8859-1"></script>
+<script type="text/javascript">
+// use rsinetsegs array from JS call above.
+var segQS="";
+if (typeof rsinetsegs != "undefined") {
+	segQS = rsinetsegs.length > 0 ? "+" + rsinetsegs[0] : "";
+	for (var i = 1; i < rsinetsegs.length; i++) {
+		// set number of segments to use
+		if (i < 6) segQS += ("+"+rsinetsegs[i]);
+	}
+}
+</script>
+<!-- end Rev Sci code -->
+
+<!-- set ad zone  -->
+<script type="text/javascript" src="/js/6807715/script.js"></script>
+
+<script type="text/javascript">
+			var rnd = new Date();
+			rnd = rnd.getTime();
+		</script><script type="text/javascript">
+		var pageProps={envhost:"www.newsnet5.com"};
+	</script>
 </head>
-<!--stopindex--><body><table cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="#ffffff"><tbody><tr><td valign="top" align="left" width="400" background="http://images.ibsys.com/nn5-structure/images/structures/headers/site_header_tile.jpg"><a href="/"><img src="http://images.ibsys.com/nn5-structure/images/structures/headers/site_header_logo.jpg" width="320" height="60" alt="NewsNet5.com" border="0"></a></td><td valign="top" align="right" background="http://images.ibsys.com/nn5-structure/images/structures/headers/site_header_tile.jpg"><img src="http://images.ibsys.com/nn5-structure/images/structures/headers/station_header.jpg" width="430" height="60" border="" alt="Privacy" id="image"></td></tr></tbody></table><div class="commerceNav"><table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/thehelpyouneed/">The Help You Need</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/houseandhome/">House &amp; Home</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/food/">Food</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/technology/">Tech</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/realestate/">Real Estate</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/legalcenter/">Law</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://ad.doubleclick.net/clk;12700835;8704162;b?http://www.eharmony.com/core/eharmony?cmd=registration-profile-opt&amp;cid=1204&amp;aid=3301">Dating</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/automotive/">Auto</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/travelgetaways">Travel</a></td></tr></tbody></table></div><div class="MainNav"><table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/">Home</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/news/">News</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://www.weathernet5.com/">Weather</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/politics/">Vote&nbsp;2005</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/theinvestigator/">Investigative</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/health/">Health</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/consumer/">Consumer</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/money/">Business</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/sports/">Sports</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/station/">NewsChannel5</a></td></tr></tbody></table></div><div class="marketplaceNav"><table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/entertainment/">Entertainment</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/education/">Education</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/employment/">Employment</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/expert/">Ask An Expert</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/shopping/">Shopping</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://ad.doubleclick.net/clk;7375135;8704162;k?http://www.smartpages.com?From=ibs2000">Yellow Pages</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/family/">Family</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://www.weddingsolutions.com/">Weddings</a></td></tr></tbody></table></div><!-- end header --><table cellpadding="0" cellspacing="10" border="0" width="100%"><tbody><tr><td valign="top"><div class="spanningcolumncap"><span class="breadcrumbs"><a href="/" class="spancolcaphome">HOME</a>&nbsp;|&nbsp;<span class="spancolcapsection">Privacy</span></span></div><br clear="all"><br clear="all"><div id="story">
+<!--stopindex--><body>
+<table cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="#ffffff"><tbody><tr><td valign="top" align="left" width="400" background="http://images.ibsys.com/nn5-structure/images/structures/headers/site_header_tile.jpg"><a href="/"><img src="http://images.ibsys.com/nn5-structure/images/structures/headers/site_header_logo.jpg" width="320" height="60" alt="NewsNet5.com" border="0"></a></td><td valign="top" align="right" background="http://images.ibsys.com/nn5-structure/images/structures/headers/site_header_tile.jpg"><img src="http://images.ibsys.com/nn5-structure/images/structures/headers/station_header.jpg" width="430" height="60" border="" alt="Privacy"></td></tr></tbody></table><div class="commerceNav"><table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';" style="background-color:#B00404;"><a href="/localexperts/">Pros Who Know</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/houseandhome/">House &amp; Home</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/food/">Food</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/technology/">Tech</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/realestate/">Real Estate</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://ad.doubleclick.net/clk;6861516;8704162;m?http://partners.findlaw.com/ibs/wews.html">Law</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/dating/">Dating</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/automotive/">Autos</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/travelgetaways">Travel</a></td></tr></tbody></table></div><div class="MainNav"><table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/">Home</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/news/">News</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://www.weathernet5.com/">Weather</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/akroncanton/">Akron-Canton</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/investigations/">Investigative</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/health/">Health</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/consumer/">Consumer</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/money/">Business</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/sports/">Sports</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/station/">NewsChannel5</a></td></tr></tbody></table></div><div class="marketplaceNav"><table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/politics/">Politics</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/entertainment/">Entertainment</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/education/">Education</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/employment/">Employment</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/shopping/">Deals</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://ad.doubleclick.net/clk;7375135;8704162;k?http://www.smartpages.com?From=ibs2000">Yellow Pages</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="/family/">Family</a></td><td align="center" valign="middle" class="button" onmouseover="this.className='onbutton';" onmouseout="this.className='button';"><a href="http://www.weddingsolutions.com/">Weddings</a></td></tr></tbody></table></div><!-- end header --><table cellpadding="0" cellspacing="10" border="0" width="100%"><tbody><tr><td valign="top"><div class="spanningcolumncap"><span class="breadcrumbs"><span class="brdcrmbhome"><a href="/" class="spancolcaphome">HOME</a>&nbsp;|&nbsp;</span><span class="brdcrmbsect"><span class="spancolcapsection">Privacy</span></span></span></div><br clear="all"><br clear="all"><div id="story" class="pageContainer">
   
   
 
@@ -101,11 +132,114 @@ Last Revised 11/03
 
 </div><br clear="all"><br clear="all"></td></tr></tbody></table><!-- begin footer --><div class="small" align="center"><br clear="all"><div align="center">
 		
-		© 2005,
-		<a href="http://www.ibsys.com/">Internet Broadcasting Systems, Inc</a>. <br><a href="/privacy/">Click here for the privacy policy</a>, <a href="/news/1012483/detail.html">terms of use</a>.<br><a href="/news/946172/detail.html">Click here for advertising information.</a><br></div><br><a class="sitemap" href="/sitemap/">Site Map</a><br><br></div>
+		© 2006,
+		<a href="http://www.ibsys.com/">Internet Broadcasting Systems, Inc</a>. <br><a href="/privacy/">Click here for the privacy policy</a>, <a href="/news/1012483/detail.html">terms of use</a>.<br><a href="/news/946172/detail.html">Click here for advertising information.</a><br></div><br><a class="sitemap" href="/sitemap/">Site Map</a><br><br></div><!-- begin Rev Sci code (dm_client) -->
+<script type="text/javascript" src="http://www.newsnet5.com/js/4230798/script.js"></script>
+
+
+<script type="text/javascript">
+var metatags = document.getElementsByTagName("meta");
+var rsiCat='';
+if (metatags.pagesection) {
+	var s=metatags["categories"].content;
+	rsiCat=s.replace(","," > ");
+}
+if (typeof DM_cat !='undefined') DM_cat(rsiCat);
+if (typeof DM_tag !='undefined') DM_tag();
+</script>
+<noscript>
+	<img src="http://pix01.revsci.net/C05503/a3/0/0/0/0/0/0/0/0/0/noscript.gif" />
+</noscript>
+<!-- end Rev Sci code -->
+
+
+<script type="text/javascript" src="http://www.newsnet5.com/js/5271885/script.js"></script>
+<script type="text/javascript" src="http://www.newsnet5.com/js/5097349/script.js"></script>
+
+
+<script language="Javascript"><!--
+gVersion="1.0";
+//-->
+</script>
+<script language="Javascript1.1"><!--
+gVersion="1.1";
+//-->
+</script>
+<script language="Javascript1.2"><!--
+gVersion="1.2";
+var RE={"%09":/\t/g,"%20":/ /g,"%23":/\#/g,"%26":/\&/g,"%2B":/\+/g,"%3F":/\?/g,"%5C":/\\/g};
+//-->
+</script>
+<script language="Javascript1.3"><!--
+gVersion="1.3";
+if (window.ActiveXObject){
+	var gFV="";
+	for (var gVer=2;gVer<=10;gVer++){
+		try{
+			var gFlash = eval("new ActiveXObject('ShockwaveFlash.ShockwaveFlash."+gVer+"');");
+			if (gFlash){
+				gFV=gVer+".0";
+				break;
+			}
+		}
+		catch(e){
+		}
+	}
+}
+//-->
+</script>
+<script language="Javascript1.4"><!--
+gVersion="1.4";
+//-->
+</script>
+<script language="Javascript1.5"><!--
+gVersion="1.5";
+//-->
+</script>
+<script language="JavaScript"><!--
+var gImages=new Array;
+var gIndex=0;
+var DCS=new Object();
+var WT=new Object();
+var DCSext=new Object();
+var gQP=new Array();
+
+var gDomain="statse.webtrendslive.com";
+var gDcsId=siteinfo.thirdparty_info.WT_info.id;
+if (siteinfo.callletters.uc)
+    DCSext.ib_station=siteinfo.callletters.uc;
+else
+    DCSext.ib_station=siteinfo.sitekey.uc;
+if (siteinfo.owner)
+    DCSext.ib_partner=siteinfo.owner;
+else
+    DCSext.ib_partner=siteinfo.sitename.mx;
+//DCSext.ib_partner=siteinfo.owner;
+//var gDcsId="dcskoovmr01e5h6qlnsvvv4ea_334h"; <----Example
+
+if ((typeof(gConvert)!="undefined")&&gConvert&&(document.cookie.indexOf(gFpc+"=")==-1)){
+	document.write("<SCR"+"IPT Language='JavaScript' SRC='"+"http"+(window.location.protocol.indexOf('https:')==0?'s':'')+"://"+gDomain+"/"+gDcsId+"/wtid.js"+"'></SCR"+"IPT>");
+}
+//-->
+</script>
+
+<!-- call DCS functions -->
+<script type="text/javascript">
+if (typeof ib_WTCustomTags == "function") ib_WTCustomTags();
+if (typeof dcsVar == "function") dcsVar();
+if (typeof dcsMeta == "function")  dcsMeta();
+if (typeof dcsFunc == "function") dcsFunc("dcsAdv");
+if (typeof dcsTag == "function") dcsTag();
+</script>
+
+
+<noscript>
+<IMG alt="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" src="http://statse.webtrendslive.com/dcsi6xg6v000004jp3ka6wkrt_2n8h/njs.gif?dcsuri=/nojavascript&WT.js=No">
+</noscript>
+
 <!--
-Time: 14:16:13 EST 
-Date: 3/16/2005
+Time: 8:12:01 EST
+Date: 3/19/2006
 XSL File: index.xsl
 Browser Type: 
 Page Type: index
